--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Modificar.cshtml
@@ -15,6 +15,17 @@
     @Html.HiddenFor(q => q.IdTransaccionSession)    
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdNovedad)
+
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
+
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-8">
@@ -24,7 +35,7 @@
                 @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="col-md-2 col-md-offset-2">
+        <div class="col-md-2">
             <div class="form-group">
                 <label for="Fecha">Fecha Novedad*</label>
                 <div class="input-group date">
@@ -42,6 +53,22 @@
                         }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                 </div>
+            </div>
+        </div>
+        <div class="col-md-1">
+            <label for="IdImprimir"></label>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+            </div>
+        </div>
+        <div class="col-md-1">
+            <label for="IdNuevo"></label>
+            <div class="form-group">
+                <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","EmpleadoNovedad",new { Area = "RRHH", IdEmpresa = Model.IdEmpresa },null)">
+                    <i class="fa fa-plus"></i>
+                </a>
             </div>
         </div>
     </div>
@@ -159,4 +186,9 @@
         });
     };
 
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/RRHHReportes/ROL_003?IdEmpleado="+@Model.IdEmpleado+"&IdNovedad="+@Model.IdNovedad, '_blank');
+        win.focus();
+    }
 </script>
