--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Modificar.cshtml
@@ -7,11 +7,22 @@
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
+
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
             <h4>
                 <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
             </h4>
         </div>
     }
@@ -23,7 +34,26 @@
     @Html.HiddenFor(q => q.IdTransaccionSession);
     @Html.HiddenFor(q => q.IdEmpresa);
 
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-10 col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","Prestamos",new { Area = "RRHH", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-5">
@@ -173,33 +203,39 @@
 
 <script>
     function Generar()
+    {
+        var datos = {
+            MontoSol: $("#MontoSol").val(),
+            Fecha_PriPago: Fecha_PriPago.GetValue(),
+            NumCuotas: $("#NumCuotas").val(),
+            descuento_mensual: descuento_mensual.GetValue(),
+            descuento_quincena: descuento_quincena.GetValue(),
+            descuento_men_quin: descuento_men_quin.GetValue()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GenerarPrestamo", "Prestamos", new { Area = "RRHH" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data)
             {
-                 var datos = {
-                     MontoSol: $("#MontoSol").val(),
-                     Fecha_PriPago: Fecha_PriPago.GetValue(),
-                     NumCuotas: $("#NumCuotas").val(),
-                     descuento_mensual: descuento_mensual.GetValue(),
-                     descuento_quincena: descuento_quincena.GetValue(),
-                     descuento_men_quin: descuento_men_quin.GetValue()
-                }
-                $.ajax({
-                    type: 'POST',
-                    data: JSON.stringify(datos),
-                    url: '@Url.Action("GenerarPrestamo", "Prestamos", new { Area = "RRHH" })',
-                    async: false,
-                    bDeferRender: true,
-                    bProcessing: true,
-                    dataType: 'json',
-                    contentType: 'application/json; charset=utf-8',
-                    success: function (data)
-                    {
 
-                        GridViewPartial_prestamos_det.PerformCallback();
+                GridViewPartial_prestamos_det.PerformCallback();
 
-                    },
-                    error: function (error)
-                    {
-                    }
-                    });
-};
+            },
+            error: function (error)
+            {
+            }
+        });
+    };
+
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/RRHHReportes/ROL_008?IdPrestamo="+@Model.IdPrestamo, '_blank');
+        win.focus();
+    }
 </script>
