--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
@@ -24,15 +24,38 @@
     @Html.HiddenFor(q => q.IdVacacion);
     @Html.HiddenFor(q => q.IdEmpresa);
 
-
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
-
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="IdProveedor">Empleado*</label>
                     @Html.Partial("_CmbEmpleado_vacaciones", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","Vacaciones",new { Area = "RRHH", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -168,27 +191,33 @@
 
 <script>
     function calcular_vacaciones()
+    {
+        var datos = {
+            IdEmpleado: IdEmpleado.GetValue()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("get_list_vacaciones", "Vacaciones", new { Area = "RRHH" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data)
             {
-                 var datos = {
-                     IdEmpleado: IdEmpleado.GetValue()
-                }
-                $.ajax({
-                    type: 'POST',
-                    data: JSON.stringify(datos),
-                    url: '@Url.Action("get_list_vacaciones", "Vacaciones", new { Area = "RRHH" })',
-                    async: false,
-                    bDeferRender: true,
-                    bProcessing: true,
-                    dataType: 'json',
-                    contentType: 'application/json; charset=utf-8',
-                    success: function (data)
-                    {
-                        IdVacacion.PerformCallback();
+                IdVacacion.PerformCallback();
 
-                    },
-                    error: function (error)
-                    {
-                    }
-                    });
-};
+            },
+            error: function (error)
+            {
+            }
+        });
+    };
+
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/RRHHReportes/ROL_007?IdEmpleado="+@Model.IdEmpleado+"&IdSolicitud="+@Model.IdSolicitud, '_blank');
+        win.focus();
+    }
 </script>
