--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/Modificar.cshtml
@@ -29,6 +29,15 @@
         </div>
 
     }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -45,7 +54,7 @@
                     @Html.ValidationMessageFor(q => q.Id_Tipo, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-6 col-md-2">
+            <div class="col-md-offset-4 col-md-2">
                 <div class="form-group">
                     <label for="">Fecha</label>
                     <div class="input-group date">
@@ -63,6 +72,22 @@
                     }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_MejBaj, "", new { @class = "text-danger" })
                     </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","RevalorizacionActivo",new { Area = "ActivoFijo", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -221,5 +246,11 @@
     function GrupoComboBox_BeginCallback(s, e) {
         e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
         e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+    }
+
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/ActivoFijoReportes/ACTF_001?IdEmpresa="+@Model.IdEmpresa+"&Id_Mejora_Baja_Activo="+@Model.Id_Mejora_Baja_Activo+"&Id_Tipo="+'@Model.Id_Tipo', '_blank');
+        win.focus();
     }
 </script>
