--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Modificar.cshtml
@@ -26,6 +26,15 @@
         </div>
 
     }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -36,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-md-offset-8 col-md-2">
+            <div class="col-md-offset-6 col-md-2">
                 <div class="form-group">
                     <label for="">Fecha de venta</label>
                     <div class="input-group date">
@@ -54,6 +63,22 @@
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Venta, "", new { @class = "text-danger" })
                     </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdNuevo"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","VentaActivo",new { Area = "ActivoFijo", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -200,12 +225,19 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-    <script>
-            function OnSelectedCtaCbleChanged() {
+<script>
+    function OnSelectedCtaCbleChanged() {
         GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
-        function GrupoComboBox_BeginCallback(s, e) {
-            e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
-            e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
-        }
-    </script>
+
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+        e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+    }
+
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/ActivoFijoReportes/ACTF_002?IdEmpresa="+@Model.IdEmpresa+"&IdVtaActivo="+@Model.IdVtaActivo, '_blank');
+        win.focus();
+    }
+</script>
